BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/GAS_Alignment_History_vts__c.object
<CustomObject>
    <description>History of all Global Account Search changes to an Account&apos;s territory alignment</description>
    <fields>
        <fullName>Account_Source_Country_BMS_EMEA__c</fullName>
        <formula>(text( Account__r.Account_Source_Country_BMS_CORE__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Source Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Territory_Loader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the ATL record that GAS has modified</description>
        <label>Account Territory Loader</label>
        <referenceTo>Account_Territory_Loader_vod__c</referenceTo>
        <relationshipLabel>GAS Alignment Histories</relationshipLabel>
        <relationshipName>GAS_Alignment_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account that has territory alignment changed</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GAS Alignment Histories</relationshipLabel>
        <relationshipName>GAS_Alignment_Histories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alignment_Status_BMS_EMEA__c</fullName>
        <label>Alignment Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Org manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synchronized with Org Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Territory__c</fullName>
        <description>New territories added to ATL</description>
        <label>New Territory</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Territory__c</fullName>
        <description>Old territories from ATL</description>
        <label>Old Territory</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Country_BMS_EMEA__c</fullName>
        <formula>(text( CreatedBy.User_Source_Country_BMS_CORE__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Country</label>
        <type>Text</type>
    </fields>
    <label>GAS Alignment History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Territory_Loader__c</columns>
        <columns>New_Territory__c</columns>
        <columns>Old_Territory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>GAS HIST {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GAS Alignment Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>